# RayTracing

example scenes/: scene_1.json  three_spheres.json
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  camera.cpp  camera.hpp  color.cpp  color.hpp  light.cpp  light.hpp  parse.cpp  parse.hpp  plane.cpp  plane.hpp  point3d.cpp  point3d.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shadedObject.cpp  shadedObject.hpp  sphere.cpp  sphere.hpp
src/gui/: aboutWindow.qml  imageprovider.cpp  imageprovider.hpp  imagerenderrunnable.cpp  imagerenderrunnable.hpp  main.cpp  main.qml  renderedimageresponse.cpp  renderedimageresponse.hpp
tests/: CMakeLists.txt  test_parsing.cpp  test_plane.cpp
